[gd_scene load_steps=21 format=2]

[ext_resource path="res://scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://gfx/tiles.png" type="Texture" id=2]
[ext_resource path="res://scripts/Camera2D.gd" type="Script" id=3]
[ext_resource path="res://scripts/TileMap.gd" type="Script" id=4]
[ext_resource path="res://sfx/blop.ogg" type="AudioStream" id=5]
[ext_resource path="res://scripts/Selector.gd" type="Script" id=6]
[ext_resource path="res://gfx/picker.png" type="Texture" id=7]
[ext_resource path="res://Fake.tscn" type="PackedScene" id=8]
[ext_resource path="res://Particles.tscn" type="PackedScene" id=9]
[ext_resource path="res://scripts/AnimationPlayer.gd" type="Script" id=10]
[ext_resource path="res://gfx/player.png" type="Texture" id=11]
[ext_resource path="res://KinematicBody2D.gd" type="Script" id=12]
[ext_resource path="res://sfx/walk.wav" type="AudioStream" id=13]

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="TileSet" id=1]
0/name = "red"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 5 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "green"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 64, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 4 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "blue"
2/texture = ExtResource( 2 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 64, 64, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 6 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "yellow"
3/texture = ExtResource( 2 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 64, 64, 64, 64 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 7 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0

[sub_resource type="Animation" id=2]
resource_name = "MoveFakes"
tracks/0/type = "value"
tracks/0/path = NodePath("TileSwapper/FakeSel:way")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TileSwapper/FakeAdj:way")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 16, 16 )

[node name="Main" type="Node2D"]
script = ExtResource( 1 )
Particles = ExtResource( 9 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 896, 476 )
current = true
smoothing_speed = 8.0
script = ExtResource( 3 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 1 )
collision_use_kinematic = true
format = 1
script = ExtResource( 4 )

[node name="Selector" type="Sprite" parent="."]
position = Vector2( 192, 0 )
texture = ExtResource( 7 )
offset = Vector2( 32, 32 )
script = ExtResource( 6 )

[node name="Picker" type="Sprite" parent="."]
position = Vector2( 320, 0 )
texture = ExtResource( 7 )
offset = Vector2( 32, 32 )
script = ExtResource( 6 )

[node name="TileSwapper" type="AnimationPlayer" parent="."]
playback_speed = 2.0
anims/MoveFakes = SubResource( 2 )
script = ExtResource( 10 )

[node name="FakeSel" parent="TileSwapper" instance=ExtResource( 8 )]
position = Vector2( 192, 128 )
way = 1.0

[node name="FakeAdj" parent="TileSwapper" instance=ExtResource( 8 )]
position = Vector2( 320, 128 )
way = 1.0

[node name="BreakDelay" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="BlopSound" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 64, 256 )
stream = ExtResource( 5 )
max_distance = 12345.0
attenuation = 6.54158e-05

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 40, -64 )
script = ExtResource( 12 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Player"]
texture = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource( 3 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Player"]
stream = ExtResource( 13 )
max_distance = 12345.0
attenuation = 0.00464534
[connection signal="tile_clicked" from="TileMap" to="." method="_on_TileMap_tile_clicked"]
[connection signal="tile_hovered" from="TileMap" to="." method="_on_TileMap_tile_hovered"]
[connection signal="tile_unhovered" from="TileMap" to="." method="_on_TileMap_tile_unhovered"]
[connection signal="animation_finished" from="TileSwapper" to="TileSwapper" method="_on_AnimationPlayer_animation_finished"]
[connection signal="started_moving" from="Player" to="." method="_on_Player_started_moving"]
